--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+  "name": "reirei-anpan/apprentice-cicd",
+  "description": "A short description of your project",
+  "license": "MIT",
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3.6"
