--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -28,7 +28,7 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Run tests with PHPUnit
-      run: vendor/bin/phpunit --coverage-text
+      run: vendor/bin/phpunit tests --coverage-text
 
     - name: Check coding standards with PHP_CodeSniffer
       run: vendor/bin/phpcs --standard=PSR12 src tests
